--- a/index.html
+++ b/index.html
@@ -3,11 +3,15 @@
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+    <link rel="manifest" href="/manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Fluxo7 Dev - Sistema de controle de demandas de desenvolvedores" />
     <meta name="keywords" content="fluxo7, dev, demandas, desenvolvedores, gerenciamento" />
     <meta name="author" content="Fluxo7 Dev" />
-    <meta name="theme-color" content="#FF6B00" />
+    <meta name="theme-color" content="#0a0a0a" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="Fluxo7 Dev" />
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website" />
