--- a/business-card-compact.html
+++ b/business-card-compact.html
@@ -19,6 +19,7 @@
             min-height: 100vh;
             display: flex;
             align-items: center;
+            justify-content: center;
             padding: 2rem;
             gap: 2rem;
             flex-wrap: wrap;
